= Change Log

== 7

- changing versions numbers back to numbers to avoid breaking firebase.

== 六 (2020-08-26)

- Update to Kotlin 1.4.0
- Removed old html parsing system. Using new morc api.
- Removed hack from 五 for timezones (no longer needed w/ new api)

== 五 (2020-08-06)

- Fixed timezone issue where times from the server were in UTC but treated as Central time so everything was off
by 6 hours.

== 四

- Adding more trail info! App now includes Cuyuna and Coggs trails on top of the morc trails.
- Updated about.md to include more info about the change.
- Made icons accessible their touch targets were too small. They have been enlarged to meet material design guidelines.

== 三

- Removed Retrofit and move all networking to shared networking module
- Updated Navigation components to androidx

== 二

- setup for next api, app pointed at gcp function that will become live when new api is out.
- Added overflow menu with "about" and "why are trails closed" items.
- Changed color theme to better support dark mode.

== 一

- Added Dark Theme
- Switched to coroutines and completely removed RxJava
- Switched to view binding
- changed version names to counting in japanese because new firebase libs can not
handle emojis.
- Switched to app bundles

== 🥝

- Moved lumberyard out of prod release
- Added adaptive icons
- Added analytics around push notifications
- Pushes can now be seen if the app is open
- Fixed lint issues

== 🍦

- Updated UI for cards
- Updated app colors
- Adding Play Store Pushing

== 🍇

- added FCM

== 🐟

- update gradle plugins and dependencies
- fixed crashlytics not reporting
- added `RxJavaPlugins.setErrorHandler { Timber.e(it) }` to avoid crashing app when two errors are
thrown in the chain.

== 🥚

- update to kotlin/java, and prepping for new apis

== 🍩

- hotfix for moving from red shift, to heroku

== 🌶

- pull to refresh implemented, and update caching.

== 🍌

- updated app colors
- updated app icon
- updated app name

== 🍎

- Initial Release