@@ -48,4 +48,5 @@
     <string name="facebook">Facebook</string>
     <string name="twitter">Twitter</string>
     <string name="mountain_project">Mountain Project</string>
+  <string name="website">website</string>
 </resources>
